--- a/here-map-frontend/tsconfig.json
+++ b/here-map-frontend/tsconfig.json
@@ -1,7 +1,24 @@
 {
+  "compilerOptions": 
+  {
+    "target": "ESNext",
+    "module": "ESNext",
+    "types": ["jest", "node"],
+    "jsx": "react-jsx",               
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+  },
+  
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  
+
+  
 }
