--- a/here-map-frontend/tsconfig.app.json
+++ b/here-map-frontend/tsconfig.app.json
@@ -5,6 +5,7 @@
     "jsx": "react-jsx",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "module": "ESNext",
     "skipLibCheck": true,
     
